# kuasar

./: .gitignore  ADOPTERS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  Makefile  Makefile.e2e  README.md  ROADMAP.md  deny.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  cleanup.yml  feature-request.yml
.github/workflows/: build-vmm-artifacts.yml  ci.yml  e2e.yml  release.yaml  run-vmm-e2e.yml  vmm-ci-on-push.yml
docs/: containerd.md
docs/proposals/: appliance_mode.md  snapshot_restore.md  virtio_blk_storage.md
docs/quark/: README.md
docs/shim/: README.md
docs/vmm/: README.md  how-to-run-kuasar-with-isulad-and-stratovirt.md  how-to-run-kuasar-with-qemu.md
docs/wasm/: How-to-run-Llama-3-8B-with-Kubernetes.md
examples/: run_example_container.sh  run_example_wasm_container.sh
hack/: e2e-test.sh  local-up-kuasar.sh  verify-e2e.sh
hack/lib/: init.sh  util.sh
quark/: Cargo.toml  deny.toml
quark/service/: kuasar-quark.service
quark/src/: args.rs  main.rs  mount.rs  sandbox.rs  utils.rs
runc/: Cargo.toml  build.rs  deny.toml
runc/src/: args.rs  common.rs  main.rs  runc.rs  sandbox.rs  task.rs  version.rs
scripts/install/: README.md  build-and-install-kuasar-vmm.sh  install-kuasar-vmm-x86.sh  uninstall-kuasar-vmm.sh
shim/: Cargo.toml  Makefile  deny.toml
shim/src/: client.rs  data.rs  io.rs  lib.rs  sandbox.rs  service.rs  task.rs
tests/benchmark/: Benchmark.md
tests/benchmark/data/gnuplot/: boot-parallel-time-cdf.gpl  boot-serial-time-cdf.gpl  mem-test.gpl
tests/benchmark/scripts/: boot-parallel-kata-time.sh  boot-parallel-kuasar-time.sh  boot-serial-kata-time.sh  boot-serial-kuasar-time.sh  kata-mem-test.sh  kuasar-mem-test.sh  util_gen_cdf.py
tests/e2e/: Cargo.toml
tests/e2e/configs/: container-runc.yaml  sandbox-runc.yaml
tests/e2e/src/: lib.rs  main.rs  tests.rs
tests/integration/cri-containerd/: gha-run.sh  integration-tests.sh  test_exec_streams.sh
tools/kuasar-ctl/: Cargo.toml  README.md
tools/kuasar-ctl/src/: main.rs  sandbox.rs
vmm/: Cargo.toml  rustfmt.toml
vmm/client/: Cargo.toml
vmm/client/src/: client.rs  lib.rs  sandbox.rs  template.rs
vmm/cloud-hypervisor_TwoNewFeatures_patch/: cloud-hypervisor-v52-filebackend-external-uffd.patch  cloud-hypervisor-v52-filebackend-external-uffd.patch.README.md  filebackend-MMAP_and_external-UFFD_feature.patch  filebackend-MMAP_and_external-UFFD_feature.patch.README.md
vmm/cloud-hypervisor_TwoNewFeatures_patch/SnapShotScripts/: create_rootfs_slim.v52.sh  create_snapshot-externalUFFD.v52.sh
vmm/common/: Cargo.toml  build.rs
vmm/common/src/: lib.rs  mount.rs  panic.rs  signal.rs  storage.rs  trace.rs  tracer.rs
vmm/common/src/api/: mod.rs
vmm/common/src/protos/: sandbox.proto
vmm/common/src/warmfork/: message.rs  mod.rs
vmm/sandbox/: Cargo.toml  build.rs  config_clh.toml  config_qemu_aarch64.toml  config_qemu_virtcca_aarch64.toml  config_qemu_x86_64.toml  config_stratovirt.toml  config_stratovirt_aarch64.toml  config_stratovirt_x86_64.toml  deny.toml
vmm/sandbox/derive/: Cargo.toml
vmm/sandbox/derive/src/: lib.rs
vmm/sandbox/src/: args.rs  cgroup.rs  client.rs  config.rs  device.rs  io.rs  kata_config.rs  lib.rs  main.rs  param.rs  restore.rs  sandbox.rs  utils.rs  vm.rs
vmm/sandbox/src/cloud_hypervisor/: block_backend.rs  client.rs  config.rs  factory.rs  hooks.rs  memory_backend.rs  mod.rs  snapshot.rs
vmm/sandbox/src/cloud_hypervisor/devices/: block.rs  console.rs  device.rs  fs.rs  mod.rs  pmem.rs  rng.rs  vfio.rs  virtio_net.rs  vsock.rs
vmm/sandbox/src/container/: mod.rs
vmm/sandbox/src/container/handler/: append.rs  io.rs  mod.rs  mount.rs  ns.rs  process.rs  spec.rs  storage.rs
vmm/sandbox/src/network/: address.rs  convert.rs  link.rs  mod.rs  netlink.rs  route.rs
vmm/sandbox/src/qemu/: config.rs  factory.rs  hooks.rs  mod.rs  qmp_client.rs  utils.rs
vmm/sandbox/src/qemu/devices/: block.rs  bridge.rs  char.rs  mod.rs  scsi.rs  serial.rs  vfio.rs  vhost_user.rs  virtio_9p.rs  virtio_net.rs  virtio_rng.rs  vsock.rs
vmm/sandbox/src/service/: mod.rs
vmm/sandbox/src/storage/: attach.rs  block_provider.rs  device_graph.rs  guest_file.rs  mod.rs  mount.rs  utils.rs
vmm/sandbox/src/stratovirt/: config.rs  factory.rs  hooks.rs  mod.rs  qmp.rs  qmp_client.rs  utils.rs  virtiofs.rs
vmm/sandbox/src/stratovirt/devices/: block.rs  char.rs  console.rs  device.rs  mod.rs  pcie_rootbus.rs  rng.rs  rootport.rs  serial.rs  vhost_user_fs.rs  virtio_net.rs  vsock.rs
vmm/sandbox/src/template/: continuation.rs  metrics.rs  mod.rs  pool.rs  types.rs
vmm/sandbox/src/warmfork/: message.rs  mod.rs  protocol.rs
vmm/scripts/image/: build.sh  build_image.sh  common.sh  install_rust.sh
vmm/scripts/image/centos/: binaries.list  build.sh  build_rootfs.sh  rpm.list
vmm/scripts/kernel/build-kernel/: build-kernel.sh  how-to-tailor-linux-kernel-for-kuasar-security-container.md  micro-kernel-aarch64.list  micro-kernel-x86_64.list  mini-kernel-aarch64.list  mini-kernel-x86_64.list
vmm/scripts/kernel/build-kernel/fragments/: 9p.conf  aarch64.conf  acpi.conf  base.conf  block.conf  cgroup.conf  character.conf  cpu.conf  debug.conf  device.conf  filesystem.conf  firmware.conf  hotplug.conf  ipv6.conf  mem.conf  mini-kernel-aarch64.conf  module.conf  namespace.conf  net.conf  netfiler.conf  nfs.conf  nvdimm.conf  pci.conf  scsi.conf  security.conf  (+3 more)
vmm/scripts/kernel/cloud_hypervisor/: build.sh
vmm/scripts/kernel/qemu/: build.sh
vmm/scripts/kernel/stratovirt/: build.sh  kuasar-openeuler-kernel-aarch64.config  kuasar-openeuler-kernel-x86_64.config
vmm/service/: kuasar-vmm  kuasar-vmm.service
vmm/task/: Cargo.toml  deny.toml  rustfmt.toml
vmm/task/src/: config.rs  container.rs  debug.rs  device.rs  image_rpc.rs  io.rs  main.rs  mount.rs  netlink.rs  sandbox.rs  sandbox_service.rs  stream.rs  streaming.rs  task.rs  util.rs  vsock.rs  youki.rs
wasm/: Cargo.toml  deny.toml
wasm/service/: kuasar-wasm.service
wasm/src/: args.rs  main.rs  sandbox.rs  utils.rs  version.rs  wasmedge.rs  wasmtime.rs
