[workspace]
members = [
    "vmm/task",
    "vmm/sandbox",
    "vmm/common",
    "runc",
    "quark",
    "wasm",
    "shim",
]
exclude = [
    "tests/e2e"
]
resolver = "2"

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"

[patch.crates-io]
ttrpc = { git = "https://github.com/kuasar-io/ttrpc-rust.git", branch = "v0.7.1-kuasar" }