[package]
name = "quark-sandboxer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
prost = "0.10.4"
prost-types = "0.10.1"
containerd-sandbox = {git="https://github.com/kuasar-io/rust-extensions.git"}
containerd-shim = {git="https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
anyhow = "1.0.66"
env_logger = "0.9.0"
log = "0.4.14"
async-trait = "0.1.88"
serde_json = "1.0.69"
nix = "0.23.0"
lazy_static = "1.4.0"
time = "0.3.5"
