[package]
name = "runc-sandboxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.7.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

[dependencies]
env_logger = "0.9.0"
anyhow = { version = "=1.0.66", default-features = false, features = ["std"] }
tokio = { version = "1.19.2", features = ["full"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
async-trait = "0.1.88"
nix = { version = "0.28.0", features = ["fs", "mount", "socket", "process", "sched", "signal", "term"] }
futures = { version = "0.3.21" }
log = { version = "0.4.17", features = ["std"] }
oci-spec = "0.5.4"
time = "0.3.5"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
procfs = "0.15.1"
prctl = "1.0.0"
os_pipe = "1.1.4"
byteorder = "1.4.3"
go-flag = "0.1.0"
uuid = { version = "1.1.2", features = ["v4"] }
clap = { version = "4.5.4", features = ["derive"] }
built = { version = "0.7.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
containerd-shim = { git = "https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
runc = { git = "https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
