[package]
name = "wasm-sandboxer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
wasmtime = ["cap-std", "wasi-cap-std-sync", "dep:wasmtime", "wasmtime-wasi"]
wasmedge = ["wasmedge-sdk"]
wasmedge_wasi_nn = ["wasmedge-sdk/wasi_nn"]

[build-dependencies]
built = { version = "0.7.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

[dependencies]
env_logger = "0.9.0"
anyhow = { version = "=1.0.66", default-features = false, features = ["std"] }
tokio = "1.13.0"
futures = { version = "0.3.21" }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
async-trait = "0.1.88"
nix = "0.25"
containerd-shim = { git = "https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
oci-spec = "0.5.4"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
log = { version = "0.4.17", features = ["std"] }
time = "0.3.5"
cgroups-rs = "0.3.2"
wasmedge-sdk = { version = "0.13.2", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
built = { version = "0.7.0", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

cap-std = { version = "1.0.14", optional = true }
wasi-cap-std-sync = { version = "8.0.1", optional = true }
wasmtime = { version = "8.0.1", features = ["async"], optional = true }
wasmtime-wasi = { version = "8.0.1", features = ["tokio"], default-features = false, optional = true }
