[package]
name = "kuasar-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
serial_test = "3.0"
tokio-test = "0.4"

[[bin]]
name = "kuasar-e2e"
path = "src/main.rs"

[lib]
name = "kuasar_e2e"
path = "src/lib.rs"
