[package]
name = "vmm-client"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "io-util"] }
