[package]
name = "vmm-common"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
containerd-sandbox = {git="https://github.com/kuasar-io/rust-extensions.git"}
serde = "1.0.139"
lazy_static = "1.4.0"
nix = "0.24.1"
anyhow = "1.0.66"
log = { version = "0.4.17", features = ["std"] }
ttrpc = { version = "0.7", features = ["async"] }
protobuf = "3.2"
async-trait = "0.1"
regex = "1.5.6"

[build-dependencies]
ttrpc-codegen = "0.4"
