[package]
name = "vmm-sandboxer"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[profile.release]
panic = 'abort'

[features]
default = []
qemu = ["qapi/qmp", "qapi/async-tokio-all", "unshare", "os_pipe"]
cloud_hypervisor = ["api_client"]
stratovirt = ["qapi/qmp", "qapi/async-tokio-all", "unshare", "os_pipe"]

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
containerd-sandbox = {git="https://github.com/kuasar-io/rust-extensions.git"}
containerd-shim = { git="https://github.com/kuasar-io/rust-extensions.git", features=["async"] }
vmm-common = { path = "../common" }
bytefmt = "0.1.7"
async-trait = "0.1.56"
anyhow = { version = "1.0.66", default-features = false, features = ["std", "backtrace"] }
lazy_static = "1.4.0"
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
toml = "0.5.9"
oci-spec = "0.5.7"
nix = "0.26"
rand = "0.8.4"
procfs = "0.13.0"
futures-util = "0.3.21"
env_logger = "0.9.0"
prost-types = "0.10.1"
time = "0.3.5"
log = { version = "0.4.17", features = ["std"] }
uuid = { version = "1.1.2", features = ["v4"] }
unshare = { version = "0.7.0", optional = true }
os_pipe = { version = "0.9.2", optional = true }
qapi = { version = "0.8.0", features = ["qmp", "async-tokio-all"], optional = true }
sandbox-derive = { path = "derive" }
api_client = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor.git", optional = true }
rtnetlink = "0.12"
netlink-packet-route = "0.15"
netlink-packet-core = "0.5.0"
ttrpc = { version = "0.7", features = ["async"] }
protobuf = "3.2"
