[package]
name = "vmm-sandboxer"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[profile.release]
panic = 'abort'

[build-dependencies]
built = { version = "0.7.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

[dependencies]
built = { version = "0.7.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
containerd-sandbox = { git = "https://github.com/kuasar-io/rust-extensions.git" }
containerd-shim = { git = "https://github.com/kuasar-io/rust-extensions.git", features = ["async"] }
vmm-common = { path = "../common" }
bytefmt = "0.1.7"
async-trait = "0.1.88"
anyhow = { version = "1.0.66", default-features = false, features = ["std", "backtrace"] }
lazy_static = "1.4.0"
serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
toml = "0.5.9"
oci-spec = "0.5.7"
nix = "0.26"
rand = "0.8.4"
procfs = "0.13.0"
futures-util = "0.3.21"
prost-types = "0.10.1"
time = "0.3.5"
log = { version = "0.4.17", features = ["std"] }
uuid = { version = "1.1.2", features = ["v4"] }
unshare = { version = "0.7.0" }
os_pipe = { version = "0.9.2" }
qapi = { version = "0.8.0", features = ["qmp", "async-tokio-all"] }
qapi-spec = { version = "0.3.1" }
sandbox-derive = { path = "derive" }
api_client = { git = "https://github.com/cloud-hypervisor/cloud-hypervisor.git" }
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
netlink-packet-core = "0.7.0"
ttrpc = { version = "0.7", features = ["async"] }
protobuf = "3.2"
cgroups-rs = "0.3.2"
proc-macro2 = "1.0.66"
hostname = "0.3"
path-clean = "1.0.1"

tracing = "0.1.40"

[[bin]]
name = "qemu"
path = "src/bin/qemu/main.rs"

[[bin]]
name = "cloud_hypervisor"
path = "src/bin/cloud_hypervisor/main.rs"

[[bin]]
name = "stratovirt"
path = "src/bin/stratovirt/main.rs"

[dev-dependencies]
temp-dir = "0.1.11"

[features]
virtcca = []
