[package]
name = "sandbox-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.40"
syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
quote = "1.0.9"
convert_case = "0.5.0"

[lib]
proc-macro = true

